--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -5,7 +5,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:name="com.iotblue.weathermapapp.ui.fragments.BookmarkFragment"
+        android:name="com.maymanm.weathermapapp.ui.fragments.BookmarkFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
