--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mapFragment"
-        android:name="com.iotblue.weathermapapp.ui.fragments.MapFragment"
+        android:name="com.maymanm.weathermapapp.ui.fragments.MapFragment"
         android:label="Map"
         tools:layout="@layout/map_fragment" >
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/bookmarkFragment"
-        android:name="com.iotblue.weathermapapp.ui.fragments.BookmarkFragment"
+        android:name="com.maymanm.weathermapapp.ui.fragments.BookmarkFragment"
         android:label="Bookmarks"
         tools:layout="@layout/fragment_bookmark" >
         <action
